sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var swapped= false
	while (swapped) {
	for (i <- 0 to 9)
		
		if (tab(i) > tab(i+1))
		{
			val tmp=tab(i)
			tab(i)=tab(i+1)
			tab(i+1)=tmp
			echange;
			swapped= true
			
		}
	} }
		

		
		
